v1.5.1 / fix: removed pixel gaps around the timeline

--- a/assets/data/TimelineJS3/timeline.theme.dark.css
+++ b/assets/data/TimelineJS3/timeline.theme.dark.css
@@ -1692,17 +1692,16 @@
 /* TL.TimeAxis
 ================================================== */
 .tl-timeaxis-background {
-  height: 38px;
+  height: 4vh;
   width: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
   background-color: #2b333d;
-  border-top: 1px solid #404040;
   z-index: 2;
 }
 .tl-timeaxis {
-  height: 38px;
+  height: 4vh;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -1712,7 +1711,7 @@
 .tl-timeaxis .tl-timeaxis-content-container {
   position: relative;
   bottom: 0;
-  height: 38px;
+  height: 4vh;
 }
 .tl-timeaxis .tl-timeaxis-content-container .tl-timeaxis-major,
 .tl-timeaxis .tl-timeaxis-content-container .tl-timeaxis-minor {
@@ -1803,7 +1802,7 @@
   display: block;
   font-size: 9px;
   line-height: 9px;
-  margin-top: -2px;
+  /* margin-top: -2px; */
   color: #7d7d7d;
 }
 .tl-timeaxis .tl-timeaxis-content-container .tl-timeaxis-minor .tl-timeaxis-tick:before {
@@ -3053,6 +3052,7 @@
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
+  margin-bottom: -1px;
 }
 .tl-timeline.tl-timeline-embed {
   box-sizing: border-box;
